; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_r_things.c_R_DrawPlayerSprites.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_r_things.c_R_DrawPlayerSprites.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__*, %struct.TYPE_8__* }
%struct.TYPE_10__ = type { i64 }
%struct.TYPE_8__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }

@viewplayer = common dso_local global %struct.TYPE_11__* null, align 8
@LIGHTSEGSHIFT = common dso_local global i32 0, align 4
@extralight = common dso_local global i32 0, align 4
@scalelight = common dso_local global i32* null, align 8
@spritelights = common dso_local global i32 0, align 4
@LIGHTLEVELS = common dso_local global i32 0, align 4
@screenheightarray = common dso_local global i32 0, align 4
@mfloorclip = common dso_local global i32 0, align 4
@negonearray = common dso_local global i32 0, align 4
@mceilingclip = common dso_local global i32 0, align 4
@NUMPSPRITES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @R_DrawPlayerSprites() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = load %struct.TYPE_11__*, %struct.TYPE_11__** @viewplayer, align 8
  %5 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %4, i32 0, i32 1
  %6 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @LIGHTSEGSHIFT, align 4
  %14 = ashr i32 %12, %13
  %15 = load i32, i32* @extralight, align 4
  %16 = add nsw i32 %14, %15
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %2, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %0
  %20 = load i32*, i32** @scalelight, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* @spritelights, align 4
  br label %41

23:                                               ; preds = %0
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* @LIGHTLEVELS, align 4
  %26 = icmp sge i32 %24, %25
  br i1 %26, label %27, label %34

27:                                               ; preds = %23
  %28 = load i32*, i32** @scalelight, align 8
  %29 = load i32, i32* @LIGHTLEVELS, align 4
  %30 = sub nsw i32 %29, 1
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %28, i64 %31
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* @spritelights, align 4
  br label %40

34:                                               ; preds = %23
  %35 = load i32*, i32** @scalelight, align 8
  %36 = load i32, i32* %2, align 4
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds i32, i32* %35, i64 %37
  %39 = load i32, i32* %38, align 4
  store i32 %39, i32* @spritelights, align 4
  br label %40

40:                                               ; preds = %34, %27
  br label %41

41:                                               ; preds = %40, %19
  %42 = load i32, i32* @screenheightarray, align 4
  store i32 %42, i32* @mfloorclip, align 4
  %43 = load i32, i32* @negonearray, align 4
  store i32 %43, i32* @mceilingclip, align 4
  store i32 0, i32* %1, align 4
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** @viewplayer, align 8
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 0
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %45, align 8
  store %struct.TYPE_10__* %46, %struct.TYPE_10__** %3, align 8
  br label %47

47:                                               ; preds = %60, %41
  %48 = load i32, i32* %1, align 4
  %49 = load i32, i32* @NUMPSPRITES, align 4
  %50 = icmp slt i32 %48, %49
  br i1 %50, label %51, label %65

51:                                               ; preds = %47
  %52 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %53 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %59

56:                                               ; preds = %51
  %57 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %58 = call i32 @R_DrawPSprite(%struct.TYPE_10__* %57)
  br label %59

59:                                               ; preds = %56, %51
  br label %60

60:                                               ; preds = %59
  %61 = load i32, i32* %1, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %1, align 4
  %63 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %64 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %63, i32 1
  store %struct.TYPE_10__* %64, %struct.TYPE_10__** %3, align 8
  br label %47

65:                                               ; preds = %47
  ret void
}

declare dso_local i32 @R_DrawPSprite(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
